# notGame

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CPP_ARCHITECTURE.md  FindSDL2.cmake  GAME_SPEC.md  LICENSE  README.md  ROADMAP.md  Wire_Connection_System_Spec.md  build.bat  build_simple_test.bat  build_test.bat  build_with_vcpkg.bat  check_imgui_features.bat  clean.bat  configure.bat  configure_with_sdl2.bat  download_sdl2_vs.bat  imgui.ini  run.bat  run_debug.bat  run_test.bat  setup_sdl2.bat  setup_vcpkg.bat  test_run.bat  test_sdl.bat  vcpkg.json.bak
cmake/: CompilerOptions.cmake  Dependencies.cmake  FetchSDL2.cmake  Packaging.cmake
docs/: BUILDING.md  CMAKE_PROJECT_SPEC.md  CONTRIBUTING.md  EVENT_LOOP_FUNCTIONAL_SPEC.md  EVENT_LOOP_SPEC.md  EVENT_LOOP_TECHNICAL_SPEC.md  EVENT_LOOP_TEST_SPEC.md  FUNCTIONAL_SPEC_SDL_OPENGL.md  GLAD_SETUP_GUIDE.md  GRID_CAMERA_FUNCTIONAL_SPEC.md  GRID_CAMERA_TECHNICAL_SPEC.md  GRID_RENDERING_SPEC.md  IMGUI_SPEC.md  IMGUI_TECH_SPEC.md  IMPLEMENTATION_STATUS.md  PROJECT_STRUCTURE.md  RENDERING_FUNCTIONAL_SPEC.md  REQUIREMENTS_SDL_OPENGL.md  ROADMAP.md  SDL2_DEPENDENCY_GUIDE.md  SHADER_FUNCTIONAL_SPEC.md  SHADER_REQUIREMENTS.md  SHADER_TECHNICAL_SPEC.md  STEP2_FUNCTIONAL_SPEC.md  STEP2_REQUIREMENTS.md  STEP2_TECHNICAL_SPEC.md  STEP3_FUNCTIONAL_SPEC.md  STEP3_REQUIREMENTS.md  STEP3_TECHNICAL_SPEC.md  STEP4_FUNCTIONAL_SPEC.md  STEP4_REQUIREMENTS.md  STEP4_TECHNICAL_SPEC.md  STEP5_BUILD_FIX.md  STEP5_DEBUG_ANALYSIS.md  STEP5_FINAL_SOLUTION.md  STEP5_FUNCTIONAL_SPEC.md  STEP5_IMPLEMENTATION_SUMMARY.md  STEP5_INTEGRATION_COMPLETE.md  STEP5_REQUIREMENTS.md  STEP5_TECHNICAL_SPEC.md  (+6 more)
scripts/: build.bat  build_release.bat  build_release.sh  download_glad.py  install_vcpkg.bat  setup_dependencies.sh
shaders/: common.glsl  grid.frag  grid.vert  line.frag  line.vert  sprite.frag  sprite.vert  ui.frag  ui.vert
src/: CMakeLists.txt  main.cpp  test.cpp  test_simple.cpp
src/core/: Application.cpp  Application.h  CellWire.h  CellWireManager.cpp  CellWireManager.h  Circuit.cpp  Circuit.h  ConnectionValidator.cpp  ConnectionValidator.h  EventSystem.cpp  EventSystem.h  Gate.cpp  Gate.h  GatePool.cpp  GatePool.h  Grid.h  GridMap.cpp  GridMap.h  PortHighlightSystem.cpp  PortHighlightSystem.h  Timer.cpp  Timer.h  Types.h  Vec2.h  Wire.cpp  Wire.h  WireManager.cpp  WireManager.h  WirePathCalculator.cpp  WirePathCalculator.h  WirePreviewSystem.cpp  WirePreviewSystem.h
src/game/: DemoScene.cpp  DemoScene.h  GameState.cpp  GameState.h  PlacementManager.cpp  PlacementManager.h  SelectionManager.cpp  SelectionManager.h
src/input/: CoordinateTransformer.h  DragManager.h  EventDispatcher.h  HitDetector.h  InputManager.h  InputTypes.h  WireInputHandler.cpp  WireInputHandler.h
src/render/: Camera.cpp  Camera.h  GateRenderer.cpp  GateRenderer.h  Grid.cpp  Grid.h  GridRenderer.cpp  GridRenderer.h  InputHandler.cpp  InputHandler.h  RenderManager.cpp  RenderManager.h  RenderTypes.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h  Window.cpp  Window.h  WireRenderer.cpp  WireRenderer.h
src/simulation/: CircuitSimulator.cpp  CircuitSimulator.h  ISimulationObserver.h  LoopDetector.cpp  LoopDetector.h  PerformanceManager.cpp  PerformanceManager.h  SignalManager.cpp  SignalManager.h  SimulationRenderer.cpp  SimulationRenderer.h  SimulationTypes.h  SimulationUI.cpp  SimulationUI.h  TimerManager.cpp  TimerManager.h
src/test/: TestGatePlacement.cpp  TestRenderSystem.cpp  TestShaderCompile.cpp  TestShaders.cpp
src/ui/: GatePaletteUI.cpp  GatePaletteUI.h  ImGuiManager.cpp  ImGuiManager.h  UIManager.cpp  UIManager.h
src/utils/: Logger.cpp  Logger.h  Math.h  Types.h
